# talk-python-training

./: .gitignore  README.rst
mongodb-quickstart/: README.rst  docker-compose.yml
mongodb-quickstart/snake-bnb/: pyproject.toml
mongodb-quickstart/snake-bnb/snake_bnb/: program.py  program_guests.py  program_hosts.py
mongodb-quickstart/snake-bnb/snake_bnb/data/: cages.py  mongo_setup.py  owners.py  snakes.py
mongodb-quickstart/snake-bnb/snake_bnb/infrastructure/: state.py  switchlang.py
mongodb-quickstart/snake-bnb/snake_bnb/services/: data_services.py
